tools/tests/errors/surf_lib_06.experr
invalid regex
nothing to repeat
